         - add exporter to inventory list
         - fix updates from custom urls
         - add /api/v1/admin/updates/install endpoint to trigger update
         - fix agent not starting if exporter_modules folder does not exist
         - check_files: add version macro support for .exe/.dll files
         - fix missing thresholds when using perf-syntax

0.27     Mon Sep  2 19:31:14 CEST 2024
         - do not use empty-state if warn/crit conditions contain check on 'count'
         - check_memory: distinguish between committed and swap memory
         - check_memory: change default type on linux to physical,swap
         - fix evaluating nested filter conditions
         - fix check_drivesize missing performance data when using free_bytes threshold (#136)
         - fix check_http/check_tcp/check_dns help (#135)
         - fix using condition alias on nested filters
         - fix check_tasksched memory leak (#122)
         - update windows exporter to 0.28.1

0.26     Wed Jul 17 15:23:37 CEST 2024
         - fix check_os_version windows build version (#134)
         - update node exporter to 1.8.2
         - chdir windows service into to shared-path folder
         - fix escaping arguments in windows ps1 scripts
         - fill unused $ARGx$ macros with empty space (#110)
         - fix if/else expression evaluation (#126)

0.25     Fri Jun 14 14:34:25 CEST 2024
         - update node exporter to 1.8.1
         - migrate v3 to github.com/shirou/gopsutil/v4
         - add device filter for network counter
         - adjust default metric counter interval to 5s and buffer length to 15m
         - lower agent memory and cpu footprint

0.24     Sun May 12 17:42:43 CEST 2024
         - update node exporter to 1.8.0
         - add native aarch64 (arm64) packages for windows
         - add support for extending default filter/warn/crit
         - check_service: use cgroup pids if no main pid available
         - fix memory leak in check_service on windows