@@ -717,10 +717,17 @@ func (snc *Agent) runCheck(ctx context.Context, name string, args []string) *Che
 			state = CheckExitOK
 		}
 
+		help := ""
+		switch builtin := handler.(type) {
+		case *CheckBuiltin:
+			help = builtin.Help(ctx, snc, chk, chk.showHelp)
+		default:
+			help = chk.Help(chk.showHelp)
+		}
 		return &CheckResult{
 			Raw:    chk,
 			State:  state,
-			Output: chk.Help(chk.showHelp),
+			Output: help,
 		}
 	}
 
